--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 data/silva_clusterd_95pct_all_seqs.fasta filter=lfs diff=lfs merge=lfs -text
+scripts/data/silva_clusterd_95pct_all_seqs.fasta filter=lfs diff=lfs merge=lfs -text
